--- a/index.html
+++ b/index.html
@@ -94,7 +94,9 @@
         <header>
             <a href="http://www.apple.com"><img src="Apple logo.jpg" alt="Apple Logo" class="apple-logo" /></a>
             <h1>Apple Watch Series 7</h1>
-            <a class="home-link" href="index.html">Home Page</a>
+			
+            <a class="home-link" href="https://github.com/Kasachinberihun/comp213week1assignment1">Home Page</a>
+
         </header>
 
         <div class="logo">
